Converted notes to plain text from html.

--- a/settings.ini
+++ b/settings.ini
@@ -3,14 +3,14 @@ geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\0\0\x4\x8e\0\0\x2\x8a\0\0\x5\xb8\0\
 position=@Point(114 110)
 
 [RecipeWidget]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x2/\0\0\x1\xcd\0\0\0\0\0\0\0\0\0\0\x2/\0\0\x1\xcd\0\0\0\x1\0\0)
-ingredientsState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2\x2\0\0\0\x2\x1\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x2\0\0\0\xa9\0\0\0\x1\0\0\0\0\0\0\x1Y\0\0\0\x1\0\0\0\0)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x2Q\0\0\x1\xd3\0\0\0\0\0\0\0\0\0\0\x2Q\0\0\x1\xd3\0\0\0\x1\0\0)
+ingredientsState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2%\0\0\0\x2\x1\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x2\0\0\x1\x3\0\0\0\x1\0\0\0\0\0\0\x1\"\0\0\0\x1\0\0\0\0)
 calculatedHorizontalState="@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\xbf\0\0\0\x3\0\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x84\0\0\0\0\0\0\0\x3\0\0\0\x42\0\0\0\x1\0\0\0\0\0\0\0=\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0)"
-calculatedVerticalState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x2\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0U\0\0\0\x5\0\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\x1e\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x1\0\0\0U\0\0\0\x5\0\0\0\0)
+calculatedVerticalState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x2\0\0\0\0\0\0\0\x5\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0U\0\0\0\x5\0\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\x1e\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x1\0\0\0U\0\0\0\x5\0\0\0\0)
 
 [MainWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\0\0\x4\x1c\0\0\x2\x1c\0\0\aj\0\0\x4\x16\0\0\x4 \0\0\x2\x33\0\0\af\0\0\x4\x12\0\0\0\x1\0\0)
-state=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\0\0\0\x3G\0\0\x1\xce\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\0)
-splitterState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x2\0\0\x1\x13\0\0\x2\t\x1\0\0\0\x4\x1\0\0\0\x1)
-size=@Size(839 480)
-position=@Point(1052 540)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\0\0\x3\xfa\0\0\x2\x4\0\0\aj\0\0\x4\x16\0\0\x3\xfe\0\0\x2\x1b\0\0\af\0\0\x4\x12\0\0\0\x1\0\0)
+state=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\0\0\0\x3i\0\0\x1\xe6\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\0)
+splitterState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x2\0\0\x1\x13\0\0\x2y\x1\0\0\0\x4\x1\0\0\0\x1)
+size=@Size(873 504)
+position=@Point(1018 516)
